adding user search GUI and Databse api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".leaderBoard"/>
         <activity android:name=".RoutineTracker"/>
         <activity android:name=".Store"/>
+        <activity android:name=".SearchFriends"/>
     </application>
 
 </manifest>
